overflow bug fixed

--- a/web/sass/_header.scss
+++ b/web/sass/_header.scss
@@ -302,7 +302,7 @@
                 padding-top: 10px;
                 border-bottom: 1px solid rgba($grayGC, 0.5);
                 white-space: nowrap;
-                overflow-x: scroll;
+                overflow-x: auto;
                 -webkit-overflow-scrolling: touch;
 
                 /*
